<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.symbol.securenfcsample1.MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/enterData"
        android:inputType="none" >
    </EditText>

    <Button
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/read" />

    <Button
        android:id="@+id/write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/read"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/write" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inc"
        android:layout_below="@+id/read"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/entrVal"
        android:inputType="number" />

    <Button
        android:id="@+id/inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/inc" />

    <Button
        android:id="@+id/dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inc"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/dec" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inc"
        android:layout_below="@+id/inc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tagData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inc"
        android:layout_below="@+id/status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>